WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192356
Fix the watchOS build; stop unnecessarily linking CorePDF
https://bugs.webkit.org/show_bug.cgi?id=192356
Summary
Fix the watchOS build; stop unnecessarily linking CorePDF
Tim Horton
Reported
2018-12-03 23:53:22 PST
Fix the watchOS build; stop unnecessarily linking CorePDF
Attachments
Patch
(2.24 KB, patch)
2018-12-03 23:53 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-12-03 23:53:32 PST
Created
attachment 356475
[details]
Patch
Tim Horton
Comment 2
2018-12-03 23:53:35 PST
<
rdar://problem/46427844
>
Wenson Hsieh
Comment 3
2018-12-03 23:54:51 PST
Comment on
attachment 356475
[details]
Patch r=mews
WebKit Commit Bot
Comment 4
2018-12-04 01:01:01 PST
Comment on
attachment 356475
[details]
Patch Clearing flags on attachment: 356475 Committed
r238849
: <
https://trac.webkit.org/changeset/238849
>
WebKit Commit Bot
Comment 5
2018-12-04 01:01:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug