Fix the watchOS build; stop unnecessarily linking CorePDF https://bugs.webkit.org/show_bug.cgi?id=192356 <rdar://problem/46427844>

Reviewed by Wenson Hsieh.

* Configurations/WebKit.xcconfig:
* Platform/spi/ios/CorePDFSPI.h:


Canonical link: https://commits.webkit.org/206990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238849 268f45cc-cd09-0410-ab3c-d52691b4dbfc